--- a/posts/about.mdx
+++ b/posts/about.mdx
@@ -1,7 +1,7 @@
 ---
-title:关于本博客
-description:关于Sciencekill的博客
-date:2022 1月 31日
+title: 关于本博客
+description: 关于Sciencekill的博客
+date: 2023年 1月 31日
 ---
 
 本人中学生...
