--- a/posts/about.mdx
+++ b/posts/about.mdx
@@ -8,7 +8,5 @@ date: 2023年 1月 31日
 如果你想在这里翻翻请自便
 能力有限写的可能不是很好
 有错误请发邮件到 
-'''
-sciencekill@outlook.com
-'''
+> sciencekill@outlook.com
 另外有兴趣可以去看看官网 [传送门~](https://sciencekill.netlify.app)
