--- a/posts/PA001.mdx
+++ b/posts/PA001.mdx
@@ -12,6 +12,10 @@ date: 2023年 1月 31日
 
 有错误请发邮件到 
 
-> sciencekill@outlook.com
+> [sciencekill@outlook.com](sciencekill@outlook.com)
 
 另外有兴趣可以去看看官网 [传送门~](https://sciencekill.netlify.app)
+
+[GitHub](https://github.com/sciencekiller)
+
+[Gitee](https://gitee.com/sciencekiller)
