--- a/posts/PD0001.mdx
+++ b/posts/PD0001.mdx
@@ -3,6 +3,8 @@ title: 下载:More-Tools
 description: More-Tools 的下载地址~
 date: 2023年 1月 31日
 ---
+# 重要事项
+More Tools 2.0正在开发!可以提前尝试[Beta版本](https://sksblog.netlify.app/posts/PD0004)
 
 # 如果你想下载More-Tools，请选择下载途径：
 
