--- a/posts/PA000.mdx
+++ b/posts/PA000.mdx
@@ -22,3 +22,7 @@ date: 2023年 2月 19日
 ## 教程
 
 - [更改开机动画](https://sksblog.netlify.app/posts/PT0001)
+
+## 帮助
+
+- [More-Tools](https://sksblog.netlify.app/posts/PH001)
